--- a/dentalfront/package.json
+++ b/dentalfront/package.json
@@ -8,6 +8,7 @@
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/resource-timegrid": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@mui/material": "^6.1.10",
     "@testing-library/jest-dom": "^5.17.0",
